src/app/central-section/move-info/move-info.component.css
.move_info_master {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 8%;
  overflow: hidden;
  transition: .3s ease;
}

.move_loading {
  font-family: 'Secular One', sans-serif;
  width: 100%;
  font-size: 2.5vh;
  text-align: left;
  line-height: 1.5em;
  color: black;
}

.player_parent {
  font-family: 'Secular One', sans-serif;
  width: 100%;
  font-size: 2.5vh;
  text-align: left;
  line-height: 1.5em;
  color: black;
}

.stone_to_play {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  width: 3vh;
  height: 3vh;
  border-radius: 50%;
  margin-left: 2.5%;
  margin-right: 1.6%;
  margin-top: -.5%;
  box-shadow: 0 0 1px black;
  transform: rotate(225deg);
  background-position: 7px 50%;
}

.black_stone_to_play {
  background-image: radial-gradient(#cccccc, #4d4d4d, #000000, #000000);
}

.white_stone_to_play {
  background-image: radial-gradient(white, #e6e6e6, #cecece, #d2d2d2);
}

.player_info {
  display: block;
  position: absolute;
  top: 50%;
  transform: translate(0%,-35%);
  height: 50%;
  animation-name: animation_player_info_appears;
  animation-duration: .25s;
}

.total_score {
  display: inline-block;
  vertical-align: middle;
  position: relative;
  font-family: 'Catamaran', sans-serif;
  font-size: 5vh;
  color: #2E93F2;
  font-weight: 900;
  margin-left: 5px;
  cursor: pointer;
  animation: animation_total_score_appears;
  animation-duration: .25s;
}

.streak {
  display: inline-block;
  vertical-align: middle;
  position: relative;
  font-family: 'Catamaran', sans-serif;
  transition: ease;
  font-size: 3vh;
  font-weight: 600;
  margin-left: 5px;
}

.bronze_streak {
  color: #905921;
  animation-name: animation_bronze_streak;
  animation-duration: .5s;
}

.silver_streak {
  color: #A8A9AD;
  animation-name: animation_silver_streak;
  animation-duration: .5s;
}

.gold_streak {
  color: #A57C00;
  animation-name: animation_gold_streak;
  animation-duration: .5s;
}

.number_of_moves {
  font-family: 'Barlow Condensed', sans-serif;
  font-size: 2.1vh;
  line-height: 1.5em;
}

.vertical_bar {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  width: 1px;
  height: 80%;
  margin: 0 10px 0 10px;
  background-color: black;
}

@media screen and (max-width: 970px) {
  .move_info_master {position: relative; height: 50px; color: white}
  .player_parent {color: white}
  .vertical_bar {background-color: white}
  .number_of_moves {color: white}
}

@media screen and (max-width: 960px) {
  .move_info_master {color: black}
  .player_parent {color: black}
  .vertical_bar {background-color: black}
  .number_of_moves {color: black}
}

@keyframes animation_player_info_appears {
  0% {opacity: 0; top: 150%;}
  100% {opacity: 1; top: 50%;}
}

@keyframes animation_total_score_appears {
  0% {opacity: 0; top: 150%;}
  100% {opacity: 1; top: 0}
}

@keyframes animation_bronze_streak {
  0% {opacity: 0; font-size: 0; font-weight: 0; rotate: 0}
  80% {opacity: 1; font-size: 5vh; font-weight: 900; rotate: 360deg}
  100% {opacity: 1; font-size: 3vh; font-weight: 600; rotate: 360deg}
}

@keyframes animation_silver_streak {
  0% {opacity: 0; font-size: 0; font-weight: 0; rotate: 0}
  80% {opacity: 1; font-size: 5vh; font-weight: 900; rotate: 720deg}
  100% {opacity: 1; font-size: 3vh; font-weight: 600; rotate: 720deg}
}

@keyframes animation_gold_streak {
  0% {opacity: 0; font-size: 0; font-weight: 0; rotate: 0}
  80% {opacity: 1; font-size: 5vh; font-weight: 900; rotate: 1080deg}
  100% {opacity: 1; font-size: 3vh; font-weight: 600; rotate: 1080deg}
}

